# azsphere-bootcamp-master

./: README.md
lab_tutorial/: lab-1.md  lab-2.md  lab-3.md  lab-4-1.md  lab-4.md
src/AzureIoT_Sensorhub/: .gitignore  CMakeLists.txt  CMakeSettings.json  IoTCentral.md  IoTHub.md  README.md  app_manifest.json  eventloop_timer_utilities.c  eventloop_timer_utilities.h  launch.vs.json  main.c
src/AzureIoT_Sensorhub/Tools/linux-x64/: ShowIoTCentralConfig.pgp
src/AzureIoT_Sensorhub/drv/bme280/: CmakeLists.txt
src/AzureIoT_Sensorhub/drv/lsm6dso_lps22hh/: CmakeLists.txt  i2cDevice.c  i2cDevice.h
src/AzureIoT_Sensorhub/script/: validate_manifest.ps1
src/lab-4/answer/: 0001-AzSphere_Tutorial-Lab-4-Answers.patch  main.c
src/lab-4/sensorhub_lsm6ds0_lps22hh/: i2cDevice.c
